# non-uniform-piecewise-layers

./: README.md  pyproject.toml
examples/: cifar100_classification.py  dynamic_circle.py  dynamic_square_wave.py  hypersphere_conv.py  implicit_3d.py  implicit_image.py  mnist_classification.py  shakespeare_generation.py  shape_classification.py  sine_fitting.py  sine_wave_generation.py
examples/config/: cifar100_classification.yaml  dynamic_circle.yaml  dynamic_square_wave.yaml  implicit_3d.yaml  implicit_images.yaml  mnist_classification.yaml  shakespeare_generation.yaml  sine_config.yaml
non_uniform_piecewise_layers/: __init__.py  adaptive_piecewise_conv.py  adaptive_piecewise_linear.py  adaptive_piecewise_mingru.py  adaptive_piecewise_mlp.py  efficient_adaptive_piecewise_conv.py  piecewise_linear.py  rotation_layer.py  utils.py
scripts/: diagram_generation.py  performance_comparison_conv.py
tests/: test_adaptive_piecewise_conv.py  test_adaptive_piecewise_linear.py  test_adaptive_piecewise_mingru.py  test_adaptive_piecewise_mlp.py  test_efficient_adaptive_piecewise_conv.py  test_piecewise_linear.py
