[tool.poetry]
name = "non-uniform-piecewise-layers"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
numpy = "^2.2.2"
lion-pytorch = "^0.2.3"
torchvision = "^0.21.0"
click = "^8.1.8"
tqdm = "^4.67.1"
triton = "^3.2.0"
open3d = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
matplotlib = "^3.10.0"
imageio = "^2.37.0"
requests = "^2.32.3"
hydra-core = "^1.3.2"
tensorboard = "^2.19.0"
trimesh = "^4.6.6"
pymcubes = "^0.1.6"
scikit-image = "^0.25.2"
rtree = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
