[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "non-uniform-piecewise-layers"
version = "0.1.0"
description = ""
authors = [{ name = "jloveric", email = "john.loverich@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "torch>=2.6.0,<3",
    "numpy>=2.2.2,<3",
    "lion-pytorch>=0.2.3,<0.3",
    "torchvision>=0.21.0,<0.22",
    "click>=8.1.8,<9",
    "tqdm>=4.67.1,<5",
    "triton>=3.2.0,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "matplotlib>=3.10.0,<4",
    "imageio>=2.37.0,<3",
    "requests>=2.32.3,<3",
    "hydra-core>=1.3.2,<2",
    "tensorboard>=2.19.0,<3",
    "trimesh>=4.6.6,<5",
    "pymcubes>=0.1.6,<0.2",
    "scikit-image>=0.25.2,<0.26",
    "rtree>=1.4.0,<2",
]
